[package]
name = "experiments"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "experiments"

[dependencies]
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "ast_traversal"
harness = false

